objects/Talent_Central__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Talent_Central</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Upgrade_Date__c</fullName>
        <label>Actual Upgrade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_transition_Date__c</fullName>
        <label>Actual Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admin_Language__c</fullName>
        <label>Admin Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English International</fullName>
                </value>
                <value>
                    <fullName>English (US)</fullName>
                </value>
                <value>
                    <fullName>Spanish (North America)</fullName>
                </value>
                <value>
                    <fullName>Chinese Simplified</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Chinese Traditional</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Others (ZAF)</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Serbian</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French (Belgium)</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>French (Canada)</fullName>
                </value>
                <value>
                    <fullName>Slovakian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_the_raised_issue_resolved__c</fullName>
        <label>Are the raised issue resolved?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attrib_System_Revenue_L12M_USD__c</fullName>
        <label>Attrib. System Revenue L12M (USD$)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDM_CS_Client_Engagement_notes__c</fullName>
        <label>BDM/CS Client Engagement Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Booked_transition_Date__c</fullName>
        <label>Confirmed Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buyer_only_notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>FOR USE BY CPS ONLY.</inlineHelpText>
        <label>Tailored Content Migration Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSIT_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSIT owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TalentCentral_Transition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calling_Notes__c</fullName>
        <inlineHelpText>Mention in case any pushbacks/concerns raised/ Calling unsuccessful</inlineHelpText>
        <label>Calling Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calling_done_if_required__c</fullName>
        <label>Calling done, if required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Classification__c</fullName>
        <label>Client Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kenexa</fullName>
                </value>
                <value>
                    <fullName>TC Pipe</fullName>
                </value>
                <value>
                    <fullName>TC Direct</fullName>
                </value>
                <value>
                    <fullName>TCI</fullName>
                </value>
                <value>
                    <fullName>TC Direct &amp; Integrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Enablement_completed__c</fullName>
        <label>Client Enablement completed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Engagement_Status__c</fullName>
        <label>Client Engagement  Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prep done</fullName>
                </value>
                <value>
                    <fullName>Account clean up in progress</fullName>
                </value>
                <value>
                    <fullName>AM reach out complete</fullName>
                </value>
                <value>
                    <fullName>Initial client contact complete</fullName>
                </value>
                <value>
                    <fullName>Inactive transition</fullName>
                </value>
                <value>
                    <fullName>Handed over to AM</fullName>
                </value>
                <value>
                    <fullName>Actively contacting client</fullName>
                </value>
                <value>
                    <fullName>First client call attempted</fullName>
                </value>
                <value>
                    <fullName>Second client call attempted</fullName>
                </value>
                <value>
                    <fullName>Third client call attempted</fullName>
                </value>
                <value>
                    <fullName>Fourth client call attempted</fullName>
                </value>
                <value>
                    <fullName>Final call attempted</fullName>
                </value>
                <value>
                    <fullName>Final email sent</fullName>
                </value>
                <value>
                    <fullName>Client contacted – awaiting response</fullName>
                </value>
                <value>
                    <fullName>Actions complete</fullName>
                </value>
                <value>
                    <fullName>Actions complete (fallback)</fullName>
                </value>
                <value>
                    <fullName>Competitor - not offering TC at this time</fullName>
                    <isActive>false</isActive>
                    <label>Competitor - not offering TC at this time</label>
                </value>
                <value>
                    <fullName>Contact away from office</fullName>
                    <isActive>false</isActive>
                    <label>Contact away from office</label>
                </value>
                <value>
                    <fullName>Contact does not wish to use CEB</fullName>
                    <isActive>false</isActive>
                    <label>Contact does not wish to use CEB</label>
                </value>
                <value>
                    <fullName>Contact no longer with organisation</fullName>
                    <isActive>false</isActive>
                    <label>Contact no longer with organisation</label>
                </value>
                <value>
                    <fullName>Contact raised commercial queries</fullName>
                    <isActive>false</isActive>
                    <label>Contact raised commercial queries</label>
                </value>
                <value>
                    <fullName>Contact requested more information</fullName>
                    <isActive>false</isActive>
                    <label>Contact requested more information</label>
                </value>
                <value>
                    <fullName>Contact requested training</fullName>
                    <isActive>false</isActive>
                    <label>Contact requested training</label>
                </value>
                <value>
                    <fullName>Contact seeking internal agreements</fullName>
                    <isActive>false</isActive>
                    <label>Contact seeking internal agreements</label>
                </value>
                <value>
                    <fullName>Engagement not started</fullName>
                    <isActive>false</isActive>
                    <label>Engagement not started</label>
                </value>
                <value>
                    <fullName>Engagement started</fullName>
                    <isActive>false</isActive>
                    <label>Engagement started</label>
                </value>
                <value>
                    <fullName>Fallen-back to Email – actions complete</fullName>
                    <isActive>false</isActive>
                    <label>Fallen-back to Email – actions complete</label>
                </value>
                <value>
                    <fullName>Has purchased NEW TC System</fullName>
                    <isActive>false</isActive>
                    <label>Has purchased NEW TC System</label>
                </value>
                <value>
                    <fullName>Inactive Client</fullName>
                    <isActive>false</isActive>
                    <label>Inactive Client</label>
                </value>
                <value>
                    <fullName>Referred to Account Manager</fullName>
                    <isActive>false</isActive>
                    <label>Referred to Account Manager</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Engagement_Type__c</fullName>
        <label>Client Engagement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GCSC Engagement Team: Client call</fullName>
                </value>
                <value>
                    <fullName>GCSC Engagement Team: Low Touch Email fallback</fullName>
                </value>
                <value>
                    <fullName>Account Manager Engagement</fullName>
                </value>
                <value>
                    <fullName>Global Priority Transition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Rejection_reason__c</fullName>
        <inlineHelpText>This applies when the client does not wish to Transition at any time.</inlineHelpText>
        <label>Client Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Going to competitor</fullName>
                </value>
                <value>
                    <fullName>No perceived benefit</fullName>
                </value>
                <value>
                    <fullName>Client not using system</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>Non-MS</fullName>
                </value>
                <value>
                    <fullName>Integrated - Standard Content</fullName>
                    <isActive>false</isActive>
                    <label>Integrated - Standard Content</label>
                </value>
                <value>
                    <fullName>Integrated - Tailored Content</fullName>
                    <isActive>false</isActive>
                    <label>Integrated - Tailored Content</label>
                </value>
                <value>
                    <fullName>Standalone - Standard Content</fullName>
                    <isActive>false</isActive>
                    <label>Standalone - Standard Content</label>
                </value>
                <value>
                    <fullName>Standalone - Tailored Content</fullName>
                    <isActive>false</isActive>
                    <label>Standalone - Tailored Content</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <label>Cohort</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Upgrade Team Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmation_Submitted_in_Order_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the legacy system has been supported by Managed Services in the past</inlineHelpText>
        <label>System supported by Managed Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Engagement_Status__c</fullName>
        <label>Current Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Blocked - Commercial</fullName>
                </value>
                <value>
                    <fullName>Blocked - Content</fullName>
                </value>
                <value>
                    <fullName>Blocked – Feature</fullName>
                </value>
                <value>
                    <fullName>AM Engaged</fullName>
                </value>
                <value>
                    <fullName>Contacting Client</fullName>
                </value>
                <value>
                    <fullName>Upgrade Agreed</fullName>
                </value>
                <value>
                    <fullName>Forced Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Transition_Activity__c</fullName>
        <label>Current Transition Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmation letter approved</fullName>
                </value>
                <value>
                    <fullName>Confirmation letter received</fullName>
                </value>
                <value>
                    <fullName>Confirmation letter rejected</fullName>
                </value>
                <value>
                    <fullName>Confirmation letter sent</fullName>
                </value>
                <value>
                    <fullName>Do Not Transition - Client Rejection</fullName>
                </value>
                <value>
                    <fullName>Do Not Transition - Deferred</fullName>
                </value>
                <value>
                    <fullName>Do Not Transition - Inactive Client</fullName>
                </value>
                <value>
                    <fullName>No confirmation letter required - client agreed</fullName>
                </value>
                <value>
                    <fullName>Reverted to legacy system</fullName>
                </value>
                <value>
                    <fullName>Selected for Transition</fullName>
                </value>
                <value>
                    <fullName>Selected for Transition – On Hold</fullName>
                </value>
                <value>
                    <fullName>Transition Date Confirmed</fullName>
                </value>
                <value>
                    <fullName>Transition Activity Completed</fullName>
                </value>
                <value>
                    <fullName>Transitioned - legacy system still active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Transition_Owner__c</fullName>
        <label>Current Upgrade Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TC+ Program Management Team</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Content_Migration__c</fullName>
        <label>Custom Content Migration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Success_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COO Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TalentCentral_Transition1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Booking_Made__c</fullName>
        <label>Date Booking Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_Warmup_Email__c</fullName>
        <label>Date for Warmup Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_pre_migration_email__c</fullName>
        <label>Date for pre-migration email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_reminder_emails__c</fullName>
        <label>Date for reminder emails</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_completion_of_UAT__c</fullName>
        <label>Date of completion of UAT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_enablement_session__c</fullName>
        <label>Date of enablement session</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Email__c</fullName>
        <label>Decision Maker Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Name__c</fullName>
        <label>Decision Maker Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferral_Date__c</fullName>
        <label>Deferral Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1 2015</fullName>
                </value>
                <value>
                    <fullName>Q2 2015</fullName>
                </value>
                <value>
                    <fullName>Q3 2015</fullName>
                </value>
                <value>
                    <fullName>Q4 2015</fullName>
                </value>
                <value>
                    <fullName>Q1 2016</fullName>
                </value>
                <value>
                    <fullName>Q2 2016</fullName>
                </value>
                <value>
                    <fullName>Q3 2016</fullName>
                </value>
                <value>
                    <fullName>Q4 2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deferral_reason__c</fullName>
        <inlineHelpText>Deferral applies when it is appropriate to delay the transition of an account - selecting a reason and an alternative deferral date</inlineHelpText>
        <label>Deferral Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not convenient for client</fullName>
                </value>
                <value>
                    <fullName>Defer until renewal</fullName>
                </value>
                <value>
                    <fullName>Functionality/content not available</fullName>
                </value>
                <value>
                    <fullName>Relationship issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deferred_Date__c</fullName>
        <label>Deferred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delegate_Confirmation_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To delegate Confirmation Letter process to GCSC,tick the box and email TCOperationalSupport@ 
executiveboard.com with specific details.</inlineHelpText>
        <label>Delegate Confirmation Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegate_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To delegate TC Demo to GCSC, tick the box and email TCOperationalSupport@executive board.com with specific details.</inlineHelpText>
        <label>Delegate Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only used when pre-agreed that Operational Support will manage the whole process.</inlineHelpText>
        <label>Delegate Entire Transition Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Did_the_client_attend_the_session__c</fullName>
        <label>Did the client attend the session?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_not_hold_client_conversation_until__c</fullName>
        <label>Do not hold client conversation until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_1_Warmup_mail_rolled_out__c</fullName>
        <label>Email 1 - Warmup mail rolled out?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_2_Pre_migration_Email_rolled_out__c</fullName>
        <label>Email 2- Pre-migration Email rolled out?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_3_TC_read_only_email_rolled_out__c</fullName>
        <label>Email 3- TC read only email rolled out?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_4_User_validation_email_rolled_ou__c</fullName>
        <label>Email4 User validation email rolled out?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_5_Post_migration_Email_rolled_out__c</fullName>
        <label>Email 5-Post-migration Email rolled out?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emerging_Markets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emerging Markets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enablement_Reminder_Calling__c</fullName>
        <label>Enablement Reminder Calling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enablement_Reminder_Email_sent__c</fullName>
        <label>Enablement Reminder Email sent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enter_the_reason_for_deferral_here__c</fullName>
        <label>Enter the reason for deferral here</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Final_Cutover_Date__c</fullName>
        <label>Final Cutover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_UAT_Sign_Off__c</fullName>
        <label>Final UAT Sign Off</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GCSC_Call_Attempt_Threshold__c</fullName>
        <label>Call Attempt Threshold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identified_Issue_Details__c</fullName>
        <label>Identified Issue Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integrator_ATS__c</fullName>
        <inlineHelpText>If integrated , mention the Integrator (ATS)</inlineHelpText>
        <label>Integrator (ATS)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issues_Identified__c</fullName>
        <label>Issues Identified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Platform__c</fullName>
        <label>Legacy Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>iAssess</fullName>
                </value>
                <value>
                    <fullName>Talent Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_System_Close_Date__c</fullName>
        <label>Legacy System Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy System Closed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Read_only_Date__c</fullName>
        <label>Legacy System Read-only Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Norm_Replacement__c</fullName>
        <label>Norm Replacement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <label>On Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Technical Holdback</fullName>
                </value>
                <value>
                    <fullName>Client Pushback</fullName>
                </value>
                <value>
                    <fullName>Commercial Reasons</fullName>
                </value>
                <value>
                    <fullName>Moved To Another Cohort</fullName>
                </value>
                <value>
                    <fullName>COO Pushback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operations_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TalentCentral_Transition_Operations_Reci</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orders_created__c</fullName>
        <label>Orders Created?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>